avoid page breaks in diagrams

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -38,6 +38,7 @@ body {
 }
 
 .chord-diagram {
+  page-break-inside: avoid;
   width: 100%;
   max-width: 1200px;
   margin: auto;
